--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -535,7 +535,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 133,
+   "id": "5e73eb0d-0c8a-46db-b561-c3fae2760ceb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "free = ['F', 'NF', 'PF']\n",
+    "together = data.loc[:, (\"Status\", \"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\")]\n",
+    "together = together.dropna()\n",
+    "together.reset_index(inplace=True)\n",
+    "for i in range(len(together)):\n",
+    "    if together.loc[i, \"Status\"] not in free:\n",
+    "        together = together.drop([i])\n",
+    "together = together.dropna()\n",
+    "together.reset_index(drop=True, inplace=True)\n",
+    "X = together.loc[:, (\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\")]\n",
+    "y = together[\"Status\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "id": "ba3ea870-9688-44e3-bbfb-4e353d8e82fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n          NF       0.91      0.86      0.89      2973\\n          PF       0.72      0.77      0.75      2584\\n           F       0.63      0.62      0.63      2716\\n\\n    accuracy                           0.76      8273\\n   macro avg       0.75      0.75      0.75      8273\\nweighted avg       0.76      0.76      0.76      8273\\n'"
+      ]
+     },
+     "execution_count": 137,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "estimators=[('lr', LogisticRegression(max_iter = 50000, class_weight='balanced')), ('mlp', MLPClassifier(max_iter = 50000, solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)), ('svc', SVC(probability=True, max_iter = 50000, class_weight='balanced'))]\n",
+    "ensemble = VotingClassifier(estimators, voting='soft')\n",
+    "model = Pipeline([('standardize', scaler),\n",
+    "                    ('ensemble', ensemble)])\n",
+    "parameters = {'C':('ensemble', 'rbf'), 'C': [1, 10]}\n",
+    "kfold = StratifiedKFold(n_splits=10)\n",
+    "predictions = cross_val_predict(model, X, y, cv=kfold)\n",
+    "target_names = ['NF', 'PF', 'F']\n",
+    "classification_report(y, predictions, target_names=target_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "3437069f-d672-4fc5-876c-358398ce1969",
    "metadata": {},
    "outputs": [],
@@ -547,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 61,
    "id": "9c05ddd0-5a2d-460d-a945-4c0acf1cec74",
    "metadata": {},
    "outputs": [],
@@ -561,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 63,
    "id": "e6945d72-399a-418e-bcb1-fc25045b9de1",
    "metadata": {},
    "outputs": [],
