--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "17d10faa-54a6-4523-bae2-b053613fc7d3",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n",
+      "Intel MKL WARNING: Support of Intel(R) Streaming SIMD Extensions 4.2 (Intel(R) SSE4.2) enabled only processors has been deprecated. Intel oneAPI Math Kernel Library 2025.0 will require Intel(R) Advanced Vector Extensions (Intel(R) AVX) instructions.\n"
+     ]
+    }
+   ],
    "source": [
     "# import packages\n",
     "\n",
@@ -55,7 +64,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_36486/658557787.py:3: DtypeWarning: Columns (364,365,366,399,415,804,836,837,924,1240,1257,1486,3094,3168,3169,3341,3342,3344,3345,3347,3350,3352) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_6903/658557787.py:3: DtypeWarning: Columns (364,365,366,399,415,804,836,837,924,1240,1257,1486,3094,3168,3169,3341,3342,3344,3345,3347,3350,3352) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  vdem = pd.read_csv('V-Dem-CY-Full+Others-v14.csv', encoding= 'utf-8')\n"
      ]
     }
@@ -349,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 71,
    "id": "e008ad9d-95d4-4f5c-a272-6e7dc048aefb",
    "metadata": {
     "scrolled": true
@@ -370,7 +379,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8a42a757f0>"
+       "<IPython.lib.display.IFrame at 0x7f815994fe20>"
       ]
      },
      "metadata": {},
@@ -390,7 +399,7 @@
     "    html.P(\"Select a indicator:\"),\n",
     "    dcc.RadioItems(\n",
     "        id='indicator', \n",
-    "        options=[\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"Status\"],\n",
+    "        options=[\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"e_fh_status\"],\n",
     "        value=\"CivLib\",\n",
     "        inline=True\n",
     "    ),\n",
@@ -413,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 73,
    "id": "fcb190a9-3eaa-4141-aa08-e197c84ea266",
    "metadata": {},
    "outputs": [
@@ -432,7 +441,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8a33352a30>"
+       "<IPython.lib.display.IFrame at 0x7f8146146400>"
       ]
      },
      "metadata": {},
@@ -457,7 +466,7 @@
     "    html.P(\"Select a indicator:\"),\n",
     "    dcc.RadioItems(\n",
     "        id='indicator', \n",
-    "        options=[\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"Status\"],\n",
+    "        options=[\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"e_fh_status\"],\n",
     "        value=\"CivLib\",\n",
     "        inline=True\n",
     "    ),\n",
@@ -509,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "bf885edb-bfbc-46cc-be4c-4d196e45a142",
    "metadata": {},
    "outputs": [
@@ -535,13 +544,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 65,
    "id": "5e73eb0d-0c8a-46db-b561-c3fae2760ceb",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# experimented adding nonreligionpct which brought scores down, removed property which helped a bit\n",
+    "\n",
     "free = ['F', 'NF', 'PF']\n",
-    "together = data.loc[:, (\"Status\", \"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\")]\n",
+    "together = data.loc[:, (\"Status\", \"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\")]\n",
     "together = together.dropna()\n",
     "together.reset_index(inplace=True)\n",
     "for i in range(len(together)):\n",
@@ -549,28 +560,29 @@
     "        together = together.drop([i])\n",
     "together = together.dropna()\n",
     "together.reset_index(drop=True, inplace=True)\n",
-    "X = together.loc[:, (\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\")]\n",
+    "X = together.loc[:, (\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\")]\n",
     "y = together[\"Status\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 67,
    "id": "ba3ea870-9688-44e3-bbfb-4e353d8e82fd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'              precision    recall  f1-score   support\\n\\n          NF       0.91      0.86      0.89      2973\\n          PF       0.72      0.77      0.75      2584\\n           F       0.63      0.62      0.63      2716\\n\\n    accuracy                           0.76      8273\\n   macro avg       0.75      0.75      0.75      8273\\nweighted avg       0.76      0.76      0.76      8273\\n'"
+       "'              precision    recall  f1-score   support\\n\\n          NF       0.91      0.86      0.88      2973\\n          PF       0.74      0.79      0.76      2584\\n           F       0.65      0.64      0.64      2716\\n\\n    accuracy                           0.77      8273\\n   macro avg       0.76      0.76      0.76      8273\\nweighted avg       0.77      0.77      0.77      8273\\n'"
       ]
      },
-     "execution_count": 137,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "scaler = StandardScaler()\n",
     "estimators=[('lr', LogisticRegression(max_iter = 50000, class_weight='balanced')), ('mlp', MLPClassifier(max_iter = 50000, solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)), ('svc', SVC(probability=True, max_iter = 50000, class_weight='balanced'))]\n",
     "ensemble = VotingClassifier(estimators, voting='soft')\n",
     "model = Pipeline([('standardize', scaler),\n",
@@ -585,6 +597,39 @@
   {
    "cell_type": "code",
    "execution_count": 59,
+   "id": "a7afad2f-1ccc-4cfc-af0c-5dd4756e220c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'              precision    recall  f1-score   support\\n\\n          NF       0.91      0.86      0.89      2973\\n          PF       0.72      0.77      0.75      2584\\n           F       0.63      0.62      0.63      2716\\n\\n    accuracy                           0.76      8273\\n   macro avg       0.75      0.75      0.75      8273\\nweighted avg       0.76      0.76      0.76      8273\\n'"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "together = data.loc[:, (\"Status\", \"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\")]\n",
+    "together = together.dropna()\n",
+    "together.reset_index(inplace=True)\n",
+    "for i in range(len(together)):\n",
+    "    if together.loc[i, \"Status\"] not in free:\n",
+    "        together = together.drop([i])\n",
+    "together = together.dropna()\n",
+    "together.reset_index(drop=True, inplace=True)\n",
+    "X = together.loc[:, (\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\")]\n",
+    "y = together[\"Status\"]\n",
+    "predictions = cross_val_predict(model, X, y, cv=kfold)\n",
+    "target_names = ['NF', 'PF', 'F']\n",
+    "classification_report(y, predictions, target_names=target_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "id": "3437069f-d672-4fc5-876c-358398ce1969",
    "metadata": {},
    "outputs": [],
@@ -596,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 28,
    "id": "9c05ddd0-5a2d-460d-a945-4c0acf1cec74",
    "metadata": {},
    "outputs": [],
@@ -610,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 29,
    "id": "e6945d72-399a-418e-bcb1-fc25045b9de1",
    "metadata": {},
    "outputs": [],
@@ -622,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 30,
    "id": "06364a23-c18e-4511-9deb-3ee4342c13f0",
    "metadata": {},
    "outputs": [
@@ -632,13 +677,12 @@
        "0.8645906748849644"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "scaler = StandardScaler()\n",
     "#lr = LogisticRegression(class_weight='balanced', max_iter = 500)\n",
     "#estimators=[('lr', LogisticRegression(max_iter = 10000, class_weight='balanced')), ('mlp', MLPClassifier(max_iter = 10000, solver='lbfgs', alpha=1e-5, hidden_layer_sizes=(5, 2), random_state=1)), ('svc', SVC(probability=True, max_iter = 10000, class_weight='balanced'))]\n",
     "#ensemble = VotingClassifier(estimators, voting='soft')\n",
@@ -658,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 31,
    "id": "4bbe2ecf-e33d-47cb-8adc-ac0dcb375389",
    "metadata": {},
    "outputs": [
@@ -666,7 +710,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_36486/1602567634.py:8: FutureWarning:\n",
+      "/var/folders/rd/8m4_zzhs0pn_c_576285lzcm0000gp/T/ipykernel_6903/1602567634.py:8: FutureWarning:\n",
       "\n",
       "Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value 'Free' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "\n"
@@ -686,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 32,
    "id": "b1c2579a-0038-4bb7-93fc-8e997006a038",
    "metadata": {},
    "outputs": [
@@ -696,7 +740,7 @@
        "'                precision    recall  f1-score   support\\n\\n      Not Free       0.86      0.90      0.88     14462\\nPartially Free       0.93      0.91      0.92     12321\\n          Free       0.77      0.76      0.76     11645\\n\\n      accuracy                           0.86     38428\\n     macro avg       0.86      0.85      0.85     38428\\n  weighted avg       0.86      0.86      0.86     38428\\n'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -719,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "id": "9bdebe54-aadc-488d-b7d1-5d3d1606b02f",
    "metadata": {},
    "outputs": [],
@@ -805,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 34,
    "id": "2f7ac08d-ae0d-45c6-a572-cd023a1d1f8a",
    "metadata": {},
    "outputs": [],
@@ -826,14 +870,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 35,
    "id": "3b40b2a2-c804-4bd7-b9fa-50d8412259ea",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4a42f29c2f30415a9bf5be6179357e21",
+       "model_id": "d28213bc61704118a3bd6579283aa8f2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -852,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 36,
    "id": "6f178501-a71c-40b5-bc6c-f649f7e8d3f3",
    "metadata": {},
    "outputs": [],
@@ -878,7 +922,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "id": "6ea8037a-e5a6-4c56-a067-7c75485010fe",
    "metadata": {},
    "outputs": [],
@@ -986,7 +1030,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 38,
    "id": "8d3cbdb5-35ca-43e0-ba34-2e93a8a14985",
    "metadata": {},
    "outputs": [],
@@ -1142,14 +1186,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 39,
    "id": "ea48305d-9b90-4e4e-9738-3e6935caa645",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8f7d96a1c3dc4e17b408b4bffebbc57d",
+       "model_id": "321f18eac8e643a883e8ac47504372d1",
        "version_major": 2,
        "version_minor": 0
       },
