--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -1023,7 +1023,111 @@
     "#update_chart(None)\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run(debug=True) #_server"
+    "    app.run(debug=True) #_server\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "id": "1c564e7e-97b0-4d55-8080-73177582b219",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <iframe\n",
+       "            width=\"100%\"\n",
+       "            height=\"650\"\n",
+       "            src=\"http://127.0.0.1:8050/\"\n",
+       "            frameborder=\"0\"\n",
+       "            allowfullscreen\n",
+       "            \n",
+       "        ></iframe>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<IPython.lib.display.IFrame at 0x7fe0b5b2e310>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# display graph over time for country using dropdown (new, multi-selection for variables, imputed))\n",
+    "\n",
+    "df = imp_cn\n",
+    "\n",
+    "app = Dash(__name__)\n",
+    "\n",
+    "country_options = [{'label': country, 'value': country} for country in df['country_name'].unique()]\n",
+    "variable_options = [{'label': variable, 'value': variable} for variable in [\"Rights\", \"Parties\", \"Media Censorship & Bias\", \"Freedom\"]]\n",
+    "\n",
+    "\n",
+    "#country_dropdown = widgets.Dropdown(options=df['country_name'].unique(), description='Country:')\n",
+    "#variables = [\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"e_fh_status\"]\n",
+    "#variable_dropdown = widgets.Dropdown(options=variables, description='Variable:')\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "    html.Div([\n",
+    "        dcc.Dropdown(\n",
+    "            id='country-dropdown',\n",
+    "            options=country_options,\n",
+    "            value=country_options[0]['value']\n",
+    "        ),\n",
+    "    ], style={'width': '48%', 'display': 'inline-block'}),\n",
+    "    html.Div([\n",
+    "        dcc.Dropdown(\n",
+    "            id='variable-dropdown',\n",
+    "            options=variable_options,\n",
+    "            value=variable_options[0]['value'],\n",
+    "            multi = True\n",
+    "        ),\n",
+    "    ], style={'width': '48%', 'display': 'inline-block'}),\n",
+    "    dcc.Graph(id='graph-court')\n",
+    "\n",
+    "])\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('graph-court', 'figure'),\n",
+    "    [Input('country-dropdown', 'value'),\n",
+    "     Input('variable-dropdown', 'value')]\n",
+    ")\n",
+    "\n",
+    "def update_chart(country, variables):\n",
+    "#    country = country_dropdown.value\n",
+    "#    variable = variable_dropdown.value\n",
+    "    filtered_df = df[df['country_name'] == country]\n",
+    "    fig = go.Figure()\n",
+    "    for variable in variables:\n",
+    "        country_data = filtered_df[filtered_df['country_name'] == country]\n",
+    "        fig.add_trace(go.Scatter(\n",
+    "            x=country_data['year'],\n",
+    "            y=country_data[variable],\n",
+    "            mode='lines',  \n",
+    "            name=f\"{variable}\", \n",
+    "            line=dict(dash='dash')  \n",
+    "    ))\n",
+    "#    fig.add_trace(go.Scatter(\n",
+    "#        x=filtered_df['year'], \n",
+    "#        y=filtered_df[variable], \n",
+    "#        mode='lines', #lines+markers\n",
+    "#        name=variable, \n",
+    "#        line=dict(dash='dash')\n",
+    "#    ))\n",
+    "    fig.update_layout(\n",
+    "        title=f'Political Indicators in {country}',\n",
+    "        xaxis_title='Year',\n",
+    "        yaxis_title='Variables',\n",
+    "        template='plotly_white'\n",
+    "    )\n",
+    "    return fig\n",
+    "\n",
+    "#update_chart(None)\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server(debug=True)"
    ]
   },
   {
