--- a/Statistics Capstone.ipynb
+++ b/Statistics Capstone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 338,
    "id": "17d10faa-54a6-4523-bae2-b053613fc7d3",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 339,
    "id": "452e21dd-9c8e-42eb-ad91-f2c9c04b4cf6",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 340,
    "id": "135406e7-1d78-4ae1-ba4c-ad2bbae506f8",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 341,
    "id": "c6925d63-63c9-43f9-8b6b-0081351a9974",
    "metadata": {},
    "outputs": [],
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 342,
    "id": "581f0556-e7c3-4275-9654-adfe516e11ff",
    "metadata": {},
    "outputs": [],
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 343,
    "id": "69abe0fb-bd63-4ee4-8a16-54a2c13c4b46",
    "metadata": {},
    "outputs": [],
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 344,
    "id": "f6099e22-7e92-405d-8506-2691254c11f5",
    "metadata": {},
    "outputs": [],
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 345,
    "id": "ba077c88-0ad3-4c94-8e37-3eef2d9c240b",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 346,
    "id": "40494763-3d29-4ffe-886c-24c02c0f321d",
    "metadata": {},
    "outputs": [],
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 347,
    "id": "b0125c41-ebd0-4f54-bb71-f330ef7afdf4",
    "metadata": {},
    "outputs": [],
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 348,
    "id": "0fbbf324-12f6-406b-a792-2324b784234c",
    "metadata": {},
    "outputs": [],
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 349,
    "id": "5741a42a-40ef-4f72-a877-47792d8ed1c5",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 350,
    "id": "a533a270-39b6-440e-ac43-bb31726f5519",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 351,
    "id": "ee709a38-4a85-440a-89e1-2b8688f853d7",
    "metadata": {},
    "outputs": [],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 352,
    "id": "4275e8f5-9d11-4ad3-b2c9-02decd35df7d",
    "metadata": {},
    "outputs": [],
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 353,
    "id": "1431878a-df6a-4515-8826-57d6067b47ba",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 354,
    "id": "73a43bad-4d01-4c52-8abc-6d86e74f7947",
    "metadata": {},
    "outputs": [],
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 355,
    "id": "693aff55-652f-4b04-9391-5b6f75d69fde",
    "metadata": {},
    "outputs": [],
@@ -427,14 +427,30 @@
     "# Import imputed csv with names\n",
     "\n",
     "imp_cn = pd.read_csv('singleagwithnewindices+names.csv', encoding= 'utf-8')\n",
-    "imp_cn = imp_cn.rename(columns={'rescaled': 'Freedom', 'rights_scaled':'Rights', 'parties_scaled':'Parties', 'mediacso_scaled':'Media Censorship & Bias'})\n",
+    "imp_cn = imp_cn.rename(columns={'rescaled': 'Freedom', 'rights_scaled':'Rights', 'parties_scaled':'Parties', 'mediacso_scaled':'Media'})\n",
     "#imp_cn = pd.read_csv('imputed_cn.csv', encoding= 'utf-8')\n",
     "#imp_cn = imp_cn.rename(columns={'rescaled': 'Freedom', 'e_gdppc':'GDP per Capita', 'v2eldonate':'Disclosure of Campaign Donations', 'v2elpubfin':'Public Campaign Finance', 'v2elembaut':'EMB Autonomy', 'v2elrgpwr':'Regional Offices Relative Power', 'v2ellocpwr':'Local Offices Relative Power', 'v2psbars':'Barriers to Parties', 'v2exrescon':'Executive Respects Constitution', 'v2cltort':'Freedom From Torture', 'v2caautmob':'Mobilization for Autocracy'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 384,
+   "id": "9cb7f20d-c16f-404c-b88a-b67f536d970e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Flip freedom scale so highest is most free\n",
+    "\n",
+    "for i in range(len(imp_cn)):\n",
+    "    imp_cn.loc[i, 'Freedom'] = abs(imp_cn.loc[i, 'Freedom'] - 8)\n",
+    "\n",
+    "for i in range(len(data)):\n",
+    "    data.loc[i, 'e_fh_status'] = abs(data.loc[i, 'e_fh_status'] - 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 386,
    "id": "40e06e3c-8ae3-480d-b81f-6387d5f160dd",
    "metadata": {},
    "outputs": [
@@ -453,7 +469,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe0e2808520>"
+       "<IPython.lib.display.IFrame at 0x7fe0b52a2220>"
       ]
      },
      "metadata": {},
@@ -532,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 221,
    "id": "44ea9275-0f83-4687-aa23-ad55ab699ad6",
    "metadata": {},
    "outputs": [],
@@ -609,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 261,
    "id": "fcb190a9-3eaa-4141-aa08-e197c84ea266",
    "metadata": {},
    "outputs": [
@@ -628,7 +644,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe0d5ac3370>"
+       "<IPython.lib.display.IFrame at 0x7fe081f5d700>"
       ]
      },
      "metadata": {},
@@ -654,7 +670,7 @@
     "    dcc.RadioItems(\n",
     "        id='indicator', \n",
     "#        options=[\"GDP per Capita\", \"Disclosure of Campaign Donations\", \"Public Campaign Finance\", \"EMB Autonomy\", \"Regional Offices Relative Power\", \"Local Offices Relative Power\", \"Barriers to Parties\", \"Executive Respects Constitution\", \"Freedom From Torture\", \"Mobilization for Autocracy\", \"Freedom\"], # e_fh_status\n",
-    "        options=[\"Rights\", \"Parties\", \"Media Censorship & Bias\", \"Freedom\"], # e_fh_status\n",
+    "        options=[\"Rights\", \"Parties\", \"Media\", \"Freedom\"], # e_fh_status\n",
     "        #        options=[{\"label\": \"GDP\", \"value\":\"GDP per Capita\"}, {\"label\": \"Disclosure\", \"value\": \"Disclosure of Campaign Donations\"}],\n",
     "        value=\"Freedom\",\n",
     "        inline=True\n",
@@ -818,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 245,
    "id": "817c74a6-8504-436e-bdc5-533435f5a2fb",
    "metadata": {},
    "outputs": [
@@ -837,7 +853,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe0b5b75910>"
+       "<IPython.lib.display.IFrame at 0x7fe0d553e580>"
       ]
      },
      "metadata": {},
@@ -921,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 247,
    "id": "7489c086-4e85-4289-bd2f-c5a07c831dff",
    "metadata": {},
    "outputs": [
@@ -940,7 +956,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe0d215d4c0>"
+       "<IPython.lib.display.IFrame at 0x7fe0827bd3d0>"
       ]
      },
      "metadata": {},
@@ -957,7 +973,7 @@
     "country_options = [{'label': country, 'value': country} for country in df['country_name'].unique()]\n",
     "#variable_options = [{'label': variable, 'value': variable} for variable in [\"GDP per Capita\", \"Disclosure of Campaign Donations\", \"Public Campaign Finance\", \"EMB Autonomy\", \"Regional Offices Relative Power\", \"Local Offices Relative Power\", \"Barriers to Parties\", \"Executive Respects Constitution\", \"Freedom From Torture\", \"Mobilization for Autocracy\", \"v2casurv\", \"Freedom\"]]\n",
     "#variable_options = [{'label': variable, 'value': variable} for variable in [\"v2caassemb\", \"v2casurv\", \"v2psoppaut\", \"v2psbars\", \"v2cldiscm\", \"v2elembaut\", \"v2psparban\", \"v2cseeorgs\", \"v2clacjstm\", \"v2mecenefm\", \"v2mebias\", \"Freedom\"]]\n",
-    "variable_options = [{'label': variable, 'value': variable} for variable in [\"Rights\", \"Parties\", \"Media Censorship & Bias\", \"Freedom\"]]\n",
+    "variable_options = [{'label': variable, 'value': variable} for variable in [\"Rights\", \"Parties\", \"Media\", \"Freedom\"]]\n",
     "\n",
     "#country_dropdown = widgets.Dropdown(options=df['country_name'].unique(), description='Country:')\n",
     "#variables = [\"CivLib\", \"Violence\", \"PolLib\", \"FreeExpress\", \"LawEqual\", \"EqProtect\", \"Corrupt_vdem\", \"Ecorrupt\", \"Pubcorrupt\", \"RuleLaw\", \"Justice\", \"Property\", \"CourtIndep\", \"nonreligpct\", \"e_fh_status\"]\n",
@@ -1028,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 243,
    "id": "1c564e7e-97b0-4d55-8080-73177582b219",
    "metadata": {},
    "outputs": [
@@ -1047,7 +1063,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fe0b5b2e310>"
+       "<IPython.lib.display.IFrame at 0x7fe0d17f8250>"
       ]
      },
      "metadata": {},
@@ -1062,7 +1078,7 @@
     "app = Dash(__name__)\n",
     "\n",
     "country_options = [{'label': country, 'value': country} for country in df['country_name'].unique()]\n",
-    "variable_options = [{'label': variable, 'value': variable} for variable in [\"Rights\", \"Parties\", \"Media Censorship & Bias\", \"Freedom\"]]\n",
+    "variable_options = [{'label': variable, 'value': variable} for variable in [\"Rights\", \"Parties\", \"Media\", \"Freedom\"]]\n",
     "\n",
     "\n",
     "#country_dropdown = widgets.Dropdown(options=df['country_name'].unique(), description='Country:')\n",
@@ -1129,6 +1145,29 @@
     "if __name__ == '__main__':\n",
     "    app.run_server(debug=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "550279a0-9d45-4e60-a399-cbb09f30a021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# region groupings\n",
+    "\n",
+    "ps_baltic = ['Estonia', 'Latvia', 'Lithuania']\n",
+    "ps_center = ['Russia', 'Byelarus', 'Ukraine', 'Moldova', 'Armenia', 'Georgia', 'Azerbaijan']\n",
+    "ps_south = ['Kazakhstan', 'Uzbekistan', 'Turkmenistan', 'Kyrgyzstan', 'Tajikistan']\n",
+    "russian_sphere = ['Hungary', 'Romania', 'Bulgaria', 'Poland', 'Serbia', 'Kosovo', 'Bosnia and Herzegovina', 'Croatia', 'Montenegro', 'Macedonia', 'Albania', 'Czechoslovakia', 'Czech Republic', 'Slovakia']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7afe84d-f215-4c67-8d17-15b0bb0762d3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
